networking ops demo init

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .project
 .skaffold-*.yaml
 .terraform.lock.hcl
-.terraform/*
+.terraform/
+**/.terraform/
 .venv/
 .vs/
 .vscode/
@@ -26,3 +27,5 @@ obj/
 pkg/
 release/wi-kubernetes-manifests.yaml
 vendor/
+*.tfplan
+tfplan
