--- a/kubernetes-manifests/checkoutservice.yaml
+++ b/kubernetes-manifests/checkoutservice.yaml
@@ -42,7 +42,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: checkoutservice
+          image: gcr.io/network-obs-demo/checkoutservice:latest
           ports:
           - containerPort: 5050
           readinessProbe:
@@ -66,6 +66,19 @@ spec:
             value: "currencyservice:7000"
           - name: CART_SERVICE_ADDR
             value: "cartservice:7070"
+          # Multicloud service URLs (optional)
+          - name: AZURE_ANALYTICS_URL
+            value: "http://10.2.1.5:8080"
+          - name: GCP_CRM_URL
+            value: "http://10.3.0.2:8080"
+          - name: GCP_INVENTORY_URL
+            value: "http://10.132.0.3:8080"
+          - name: GCP_FURNITURE_URL
+            value: "http://10.5.0.2:8080"
+          - name: GCP_WAREHOUSE_URL
+            value: "https://warehouse-api-service-m45igafiqq-ew.a.run.app"
+          - name: GCP_ACCOUNTING_URL
+            value: "https://accounting-api-service-m45igafiqq-uc.a.run.app"
           resources:
             requests:
               cpu: 100m
