--- a/multicloud/checkout-config/checkoutservice-config.yaml
+++ b/multicloud/checkout-config/checkoutservice-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: multicloud-config
+  name: checkoutservice-config
   namespace: default
 data:
   AWS_ACCOUNTING_URL: "http://54.163.148.73:8080"
@@ -9,5 +9,5 @@ data:
   GCP_CRM_URL: "http://10.2.0.2:8080"
   GCP_INVENTORY_URL: "http://10.132.0.3:8080"
 ---
-# Apply this ConfigMap first, then update your loadgenerator deployment to use it
-# kubectl apply -f multicloud-config.yaml 
+# Apply this ConfigMap first, then update your checkoutservice deployment to use it
+# kubectl apply -f checkoutservice-config.yaml 
