--- a/multicloud/gcp/crm-backend/package.json
+++ b/multicloud/gcp/crm-backend/package.json
@@ -7,7 +7,11 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
+    "cors": "^2.8.6",
     "express": "^4.18.2",
-    "@google-cloud/storage": "^7.7.0"
+    "mysql2": "^3.18.2",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   }
 }
