feat(checkoutservice): natively integrate Pub/Sub asynchronous event broadcasting

--- a/multicloud/checkout-config/checkoutservice-config.yaml
+++ b/multicloud/checkout-config/checkoutservice-config.yaml
@@ -10,6 +10,8 @@ data:
   GCP_FURNITURE_URL: "http://10.5.0.2:8080"        # Furniture service
   GCP_WAREHOUSE_URL: "https://warehouse-api-service-985429063844.europe-west1.run.app"  # Cloud Run
   GCP_ACCOUNTING_URL: "https://accounting-api-service-985429063844.us-central1.run.app" # Cloud Run
+  PUBSUB_TOPIC: "order-events"                     # Pub/Sub topic for OrderConfirmedEvent
+  GCP_PROJECT_ID: "network-obs-demo"               # Replace with your GCP Project ID
 ---
 # Apply this ConfigMap first, then update your checkoutservice deployment to use it
 # kubectl apply -f checkoutservice-config.yaml 
