--- a/multicloud/gcp/crm-frontend/package.json
+++ b/multicloud/gcp/crm-frontend/package.json
@@ -4,6 +4,7 @@
   "description": "CRM Customer Dashboard Frontend",
   "main": "app.js",
   "dependencies": {
+    "cors": "^2.8.6",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
