--- a/multicloud/gcp/developer-portal/mkdocs.yml
+++ b/multicloud/gcp/developer-portal/mkdocs.yml
@@ -71,7 +71,7 @@ markdown_extensions:
 nav:
   - Welcome: index.md
   - Architecture Framework:
-    - Business View: BUSINESS_VIEW.md
-    - Connecting It All (Networking): NETWORKING_VIEW.md
-    - Tech Specs (Technical): TECHNICAL_VIEW.md
-    - Topologies (Deployment): DEPLOYMENT_VIEW.md
+    - Business Domains: business.md
+    - Technical Architecture: technical.md
+    - Cloud Networking: networking.md
+    - Infrastructure & DevOps: infrastructure.md
