--- a/multicloud/gcp/warehouse-service/package.json
+++ b/multicloud/gcp/warehouse-service/package.json
@@ -4,10 +4,15 @@
   "description": "Mock warehouse service API",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "nock": "^14.0.11",
+    "supertest": "^7.2.2"
   }
 }
-
