--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -26,6 +26,8 @@ spec:
     metadata:
       labels:
         app: cartservice
+      annotations:
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       serviceAccountName: cartservice
       terminationGracePeriodSeconds: 5
@@ -100,6 +102,8 @@ spec:
     metadata:
       labels:
         app: redis-cart
+      annotations:
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       securityContext:
         fsGroup: 1000
