--- a/kubernetes-manifests/emailservice.yaml
+++ b/kubernetes-manifests/emailservice.yaml
@@ -26,6 +26,8 @@ spec:
     metadata:
       labels:
         app: emailservice
+      annotations:
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       serviceAccountName: emailservice
       terminationGracePeriodSeconds: 5
