--- a/kubernetes-manifests/paymentservice.yaml
+++ b/kubernetes-manifests/paymentservice.yaml
@@ -26,6 +26,8 @@ spec:
     metadata:
       labels:
         app: paymentservice
+      annotations:
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       serviceAccountName: paymentservice
       terminationGracePeriodSeconds: 5
