--- a/kubernetes-manifests/currencyservice.yaml
+++ b/kubernetes-manifests/currencyservice.yaml
@@ -26,6 +26,8 @@ spec:
     metadata:
       labels:
         app: currencyservice
+      annotations:
+        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       serviceAccountName: currencyservice
       terminationGracePeriodSeconds: 5
