fix(ops): organize troubleshooting tools & fix synthetic tests/dev portal

--- a/kubernetes-manifests/frontend.yaml
+++ b/kubernetes-manifests/frontend.yaml
@@ -93,8 +93,8 @@ spec:
           #   value: "true"
           # - name: ENABLE_ASSISTANT
           #   value: "true"
-          # - name: FRONTEND_MESSAGE
-          #   value: "Replace this with a message you want to display on all pages."
+          - name: FRONTEND_MESSAGE
+            value: "Free shipping with $75 purchase!"
           # As part of an optional Google Cloud demo, you can run an optional microservice called the "packaging service".
           # - name: PACKAGING_SERVICE_URL
           #   value: "" # This value would look like "http://123.123.123"
