--- a/scripts/troubleshooting/get-pods-status.yaml
+++ b/scripts/troubleshooting/get-pods-status.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/kubectl'
-  args: ['get', 'pods', '-n', 'default', '-o', 'wide']
+  args: ['get', 'pods', '-l', 'app=frontend']
   env:
   - 'CLOUDSDK_COMPUTE_REGION=us-central1'
   - 'CLOUDSDK_CONTAINER_CLUSTER=online-boutique'
