Fix loadgenerator Istio sidecar startup issue - Removed frontend-check initContainer which fails in mesh and fixed syntax error in Helm

--- a/helm-chart/templates/loadgenerator.yaml
+++ b/helm-chart/templates/loadgenerator.yaml
@@ -75,7 +75,7 @@ spec:
           for i in $(seq 1 $MAX_RETRIES); do
             echo "Attempt $i: Pinging frontend: ${FRONTEND_ADDR}..."
             STATUSCODE=$(wget --server-response http://${FRONTEND_ADDR} 2>&1 | awk '/^  HTTP/{print $2}')
-            if [ $STATUSCODE -eq 200 ]; then
+            if [ "$STATUSCODE" = "200" ]; then
                 echo "Frontend is reachable."
                 exit 0
             fi
