Fix cartservice intermittent 503 errors by disabling pod probe HTTP rewrite

--- a/helm-chart/templates/cartservice.yaml
+++ b/helm-chart/templates/cartservice.yaml
@@ -40,9 +40,13 @@ spec:
     metadata:
       {{- if .Values.cartDatabase.externalRedisTlsOrigination.enable }}
       annotations:
+        sidecar.istio.io/rewriteAppHTTPProbers: "false"
         sidecar.istio.io/userVolumeMount: '[{"name": "{{ .Values.cartDatabase.externalRedisTlsOrigination.name }}", "mountPath": "/etc/certs", "readonly": true}]'
         sidecar.istio.io/userVolume: '[{"name": "{{ .Values.cartDatabase.externalRedisTlsOrigination.name }}", "secret": {"secretName": "{{ .Values.cartDatabase.externalRedisTlsOrigination.name }}"}}]'
         proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
+      {{- else }}
+      annotations:
+        sidecar.istio.io/rewriteAppHTTPProbers: "false"
       {{- end }}
       labels:
         app: {{ .Values.cartService.name }}
