--- a/kubernetes-manifests/cartservice.yaml
+++ b/kubernetes-manifests/cartservice.yaml
@@ -27,6 +27,7 @@ spec:
       labels:
         app: cartservice
       annotations:
+        sidecar.istio.io/rewriteAppHTTPProbers: "false"
         proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
     spec:
       serviceAccountName: cartservice
